[project]
name = "cloud-resource-gym"
version = "0.1.0"
description = "Reinforcement learning environment for cloud resource allocation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.20.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cloud-gym-demo = "main:main"
cloud-gym-train = "scripts.train_rl_baseline:main"
cloud-gym-train-improved = "scripts.train_all_improved:main"
cloud-gym-eval = "scripts.evaluate_baselines:main"
cloud-gym-viz = "scripts.visualize_results:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
